# Rationals

./: Cargo.toml
src/: Euclid.rs  fraction.rs  implScalar.rs  lib.rs
tests/: linear_eq.rs
