[package]
name = "Rationals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cauchy = "0.4.0"
ndarray-linalg = "0.16.0"
ndarray = "0.15.6"
serde = { version = "1.0.162", features = ["derive"] }
num-traits = "0.2.15"
